--- a/StoreApp/templates/StoreApp/invoice.html
+++ b/StoreApp/templates/StoreApp/invoice.html
@@ -11,5 +11,7 @@
     <p>Price: {{ price }}</p>
     <p>Shipping Details: {{ shipping_details }}</p>
     <p>Payment Information: {{ payment_info }}</p>
+    <h2>{{ shipping_details.price }}</h2>
+    <h2>{{ shipping_details.title }}</h2>
  </body>
 </html>
