--- a/StoreApp/templates/StoreApp/checkout.html
+++ b/StoreApp/templates/StoreApp/checkout.html
@@ -105,13 +105,17 @@
         <h2 class="mb-4">Checkout</h2>
         <form method="post" action="{% url 'checkout' %}">
           {% csrf_token %}
+          {% if id %}
+           <!--To fetch and send the user_id to checkout_function-->
+          <input type="hidden" name="user_id" value="{{id}}">
+          {% endif %}
           {% if title  and price %}
 
           <!-- Order Summary -->
           <div class="mb-4">
             <h3>Order Summary</h3>
             <!-- Display summary of items in the cart -->
-            <h4> {{title}}-{{price}}</h4>
+            <h4> {{title}}-{{price}} USD </h4>
             <hr>
             <h5>Total:{{price}}USD</h5>
           </div>
@@ -124,6 +128,25 @@
             {{ shipping_form.as_p }}
             <h4>Payment Information</h4>
             {{ payment_form.as_p }}
+            <h4>Shipping Method</h4>
+          <div class="form-check">
+            <input class="form-check-input" type="radio" name="shipping_method" id="standardShipping" value="0" checked>
+            <label class="form-check-label" for="standardShipping">
+              Standard Shipping (Free)
+            </label>
+          </div>
+          <div class="form-check">
+            <input class="form-check-input" type="radio" name="shipping_method" id="expeditedShipping" value="5">
+            <label class="form-check-label" for="expeditedShipping">
+              Expedited Shipping (+$5)
+            </label>
+          </div>
+          <div class="form-check">
+            <input class="form-check-input" type="radio" name="shipping_method" id="expressShipping" value="10">
+            <label class="form-check-label" for="expressShipping">
+              Express Shipping (+$10)
+            </label>
+          </div>
             <div class="mb-4 form-check">
               <input type="checkbox" class="form-check-input" id="termsCheck" required>
               <label class="form-check-label" for="termsCheck">I agree to the terms and conditions</label>
@@ -133,6 +156,8 @@
       </div>
     </div>
   </div>
+  {% if id %}
+  {% endif %}
 
   <!-- Footer -->
   <footer>
