--- a/StoreApp/templates/StoreApp/checkout.html
+++ b/StoreApp/templates/StoreApp/checkout.html
@@ -60,8 +60,7 @@
 
 <body>
 
-  <!-- Navbar -->
-  <nav class="navbar navbar-expand-lg navbar-dark">
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container">
       <a class="navbar-brand" href="#">BW Store</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -71,7 +70,7 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ms-auto">
           <li class="nav-item">
-            <a class="nav-link" href="#">Home</a>
+            <a class="nav-link" href="{% url 'home'%}">Home</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">Categories</a>
