--- a/StoreApp/templates/StoreApp/checkout.html
+++ b/StoreApp/templates/StoreApp/checkout.html
@@ -6,7 +6,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Black and White E-commerce Store</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-
   <style>
     body {
       background-color: #ffffff;
@@ -59,43 +58,36 @@
 </head>
 
 <body>
-
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <div class="container">
-      <a class="navbar-brand" href="#">BW Store</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
+  <div class="container">
+      <!-- Navbar brand -->
+      <a class="navbar-brand" href="{% url 'home'%}">BW Store</a>
+      
+      <!-- Toggler button for small screens -->
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
       </button>
+      
+      <!-- Collapsible content -->
       <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav ms-auto">
-          <li class="nav-item">
-            <a class="nav-link" href="{% url 'home'%}">Home</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Categories</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">About</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Contact</a>
-          </li>
-        </ul>
+          <ul class="navbar-nav ms-auto">
+              <!-- Nav items -->
+              <li class="nav-item">
+                  <a class="nav-link" href="{% url 'home'%}">Home</a>
+              </li>
+              <li class="nav-item">
+                  <a class="nav-link" href="{% url 'categories' %}">Categories</a>
+              </li>
+              <li class="nav-item">
+                  <a class="nav-link" href="{% url 'about' %}">About</a>
+              </li>
+              <li class="nav-item">
+                  <a class="nav-link" href="{% url 'contact' %}">Contact</a>
+              </li>
+          </ul>
       </div>
-    </div>
-  </nav>
-
-  <!-- Hero Section -->
-  <div class="container my-5">
-    <div class="row">
-      <div class="col-md-12 text-center">
-        <h1 class="display-4">Welcome to BW Store</h1>
-        <p class="lead">The best black and white themed e-commerce store</p>
-        <a href="#" class="btn btn-outline-light">Explore Now</a>
-      </div>
-    </div>
   </div>
+</nav>
 
   <!-- Checkout Section -->
   <div class="container">
