--- a/StoreApp/templates/StoreApp/index.html
+++ b/StoreApp/templates/StoreApp/index.html
@@ -128,7 +128,7 @@
           <img src="{{ product.image.url }}" class="card-img-top" alt="Product 1">
           <div class="card-body d-flex flex-column">
             <h5 class="card-title">{{ product.title }}</h5>
-            <p class="card-text flex-grow-1">{{ product.description }}</p>
+            <p class="card-text flex-grow-1">{{ product.description|truncatechars:100 }}</p>
             <p class="card-text"><strong>Price:</strong> ${{ product.price }}</p>
             <a href="{% url 'before_checkout' %}?title={{ product.title }}&price={{ product.price }}&id={{ product.id }}" class="btn btn-outline-light mt-auto">Buy Now</a>
           </div>
@@ -148,7 +148,7 @@
       <img src="{{ product.image.url }}" class="card-img-top" alt="Product 1">
       <div class="card-body d-flex flex-column">
         <h5 class="card-title">{{ product.title }}</h5>
-        <p class="card-text flex-grow-1">{{ product.description }}</p>
+        <p class="card-text flex-grow-1">{{ product.description|truncatechars:100 }}</p>
         <p class="card-text"><strong>Price:</strong> ${{ product.price }}</p>
         <a href="{% url 'before_checkout' %}?title={{ product.title }}&price={{ product.price }}&id={{ product.id }}" class="btn btn-outline-light mt-auto">Buy Now</a>
       </div>
@@ -169,7 +169,7 @@
       <img src="{{ product.image.url }}" class="card-img-top" alt="Product 1">
       <div class="card-body d-flex flex-column">
         <h5 class="card-title">{{ product.title }}</h5>
-        <p class="card-text flex-grow-1">{{ product.description }}</p>
+        <p class="card-text flex-grow-1">{{ product.description|truncatechars:100 }}</p>
         <p class="card-text"><strong>Price:</strong> ${{ product.price }}</p>
         <a href="{% url 'before_checkout' %}?title={{ product.title }}&price={{ product.price }}&id={{ product.id }}" class="btn btn-outline-light mt-auto">Buy Now</a>
       </div>
@@ -190,7 +190,7 @@
       <img src="{{ product.image.url }}" class="card-img-top" alt="Product 1">
       <div class="card-body d-flex flex-column">
         <h5 class="card-title">{{ product.title }}</h5>
-        <p class="card-text flex-grow-1">{{ product.description }}</p>
+        <p class="card-text flex-grow-1">{{ product.description|truncatechars:100 }}</p>
         <p class="card-text"><strong>Price:</strong> ${{ product.price }}</p>
         <a href="{% url 'before_checkout' %}?title={{ product.title }}&price={{ product.price }}&id={{ product.id }}" class="btn btn-outline-light mt-auto">Buy Now</a>
       </div>
@@ -211,7 +211,7 @@
       <img src="{{ product.image.url }}" class="card-img-top" alt="Product 1">
       <div class="card-body d-flex flex-column">
         <h5 class="card-title">{{ product.title }}</h5>
-        <p class="card-text flex-grow-1">{{ product.description }}</p>
+        <p class="card-text flex-grow-1">{{ product.description|truncatechars:100 }}</p>
         <p class="card-text"><strong>Price:</strong> ${{ product.price }}</p>
         <a href="{% url 'before_checkout' %}?title={{ product.title }}&price={{ product.price }}&id={{ product.id }}" class="btn btn-outline-light mt-auto">Buy Now</a>
       </div>
@@ -232,7 +232,7 @@
       <img src="{{ product.image.url }}" class="card-img-top" alt="Product 1">
       <div class="card-body d-flex flex-column">
         <h5 class="card-title">{{ product.title }}</h5>
-        <p class="card-text flex-grow-1">{{ product.description }}</p>
+        <p class="card-text flex-grow-1">{{ product.description|truncatechars:100 }}</p>
         <p class="card-text"><strong>Price:</strong> ${{ product.price }}</p>
         <a href="{% url 'before_checkout' %}?title={{ product.title }}&price={{ product.price }}&id={{ product.id }}" class="btn btn-outline-light mt-auto">Buy Now</a>
       </div>
@@ -254,7 +254,7 @@
       <img src="{{ product.image.url }}" class="card-img-top" alt="Product 1">
       <div class="card-body d-flex flex-column">
         <h5 class="card-title">{{ product.title }}</h5>
-        <p class="card-text flex-grow-1">{{ product.description }}</p>
+        <p class="card-text flex-grow-1">{{ product.description|truncatechars:100 }}</p>
         <p class="card-text"><strong>Price:</strong> ${{ product.price }}</p>
         <a href="{% url 'before_checkout' %}?title={{ product.title }}&price={{ product.price }}&id={{ product.id }}" class="btn btn-outline-light mt-auto">Buy Now</a>
       </div>
